@@ -4,47 +4,44 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.Reader;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 public class TextTokenizer {
 
     private final Set<String> stopwords;
-    private static final Pattern NON_WORD_PATTERN = Pattern.compile("\\W+");
 
     public TextTokenizer(Reader stopwordsReader) {
         if (stopwordsReader == null) {
             throw new IllegalArgumentException("Stopwords reader cannot be null");
         }
+
         try (var br = new BufferedReader(stopwordsReader)) {
-            stopwords = Collections.unmodifiableSet(
-                    br.lines()
-                            .map(String::strip)
-                            .filter(word -> !word.isEmpty())
-                            .collect(Collectors.toSet()));
+            stopwords = br.lines()
+                    .map(String::toLowerCase)
+                    .map(String::strip)
+                    .filter(word -> !word.isEmpty())
+                    .collect(Collectors.toSet());
         } catch (IOException ex) {
             throw new IllegalArgumentException("Could not load stopwords dataset", ex);
         }
     }
 
     public List<String> tokenize(String input) {
-        if (input == null) {
-            throw new IllegalArgumentException("Input cannot be null");
-        }
-        if (input.isBlank()) {
+        if (input == null || input.isBlank()) {
             return List.of();
         }
 
-        input = input.toLowerCase();
-        String[] words = NON_WORD_PATTERN.split(input);
+        String cleanedInput = input.replaceAll("\\p{Punct}", " ");
 
-        return Arrays.stream(words)
-                .filter(word -> !stopwords.contains(word))
-                .filter(word -> !word.isEmpty())
-                .collect(Collectors.toList());
+        cleanedInput = cleanedInput.toLowerCase().replaceAll("\\s+", " ").strip();
+
+        String[] tokens = cleanedInput.split(" ");
+
+        return Arrays.stream(tokens)
+                .filter(word -> !word.isBlank() && !stopwords.contains(word))
+                .toList();
     }
 
     public Set<String> stopwords() {
